ecmascript/parser/tests/typescript-errors/tsc/es6/templates/templateStringInFunctionParameterType/input.ts.stderr
error[1005]: Expected a binding pattern
 --> $DIR/tests/typescript-errors/tsc/es6/templates/templateStringInFunctionParameterType/input.ts:1:12
  |
1 | function f(`hello`);
  |            ^^^^^^^

